--- a/assets/styles/app.css
+++ b/assets/styles/app.css
@@ -1,3 +1,16 @@
 body {
-    background-color: skyblue;
+display: flex;
+flex-direction: column;
+min-height: 100vh;
+background-color: lightskyblue;
+}
+main {
+flex: 1;
+padding: 5px;
+}
+footer {
+background-color: #fff;
+height: 2em;
+    padding-bottom: 70px;
+    text-align: center;
 }
