--- a/templates/_navbar.html.twig
+++ b/templates/_navbar.html.twig
@@ -7,6 +7,8 @@
             <ul class="navbar-nav me-auto mb-2 mb-md-0">
                 <li class="nav-item"><a class="nav-link active" aria-current="page" href="{{ path('main_home') }}">Home</a></li>
                 <li class="nav-item"><a class="nav-link" href="{{ path('main_test') }}">Test</a></li>
+                <li class="nav-item"><a class="nav-link" href="{{ path('course_list') }}">Liste Cours</a></li>
+                <li class="nav-item"><a class="nav-link" href="{{ path('course_create') }}">Creer un cours</a></li>
 
             </ul>
 
